Redis的环境配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
   servlet:
     multipart:
       max-file-size: 100MB
+  redis:
+    host: 192.168.56.20
+    port: 6379
+    database: 0
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
@@ -21,4 +25,4 @@ mybatis-plus:
     db-config:
       id-type: ASSIGN_ID
 che:
-  path: /Users/xiaoluyouqu/project/img
+  path: /Users/xiaoluyouqu/project/img/
