--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,44 +3,15 @@ server:
 spring:
   application:
     name: qia_take_out
-  shardingsphere:
-    datasource:
-      names:
-        master,slave
-      #主数据库
-      master:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.56.20:3306/take-out?characterEncoding=utf-8
-        username: root
-        password: root
-      #从数据库
-      slave:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.56.21:3306/take-out?characterEncoding=utf-8
-        username: root
-        password: root
-    masterslave:
-      load-balance-algorithm-type: round_robin
-      master-data-source-name: master
-      name: dataSource
-      slave-data-source-names: slave
-    props:
-      sql:
-        show: true
-  main:
-    allow-bean-definition-overriding: true
+  datasource:
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://192.168.56.12:3306/qia-take-out?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+      username: root
+      password: root
   servlet:
     multipart:
       max-file-size: 100MB
-  redis:
-    host: 192.168.56.20
-    port: 6379
-    database: 0
-  cache:
-    redis:
-      time-to-live: 1800000 #设置缓存数据的过期时间
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
@@ -50,4 +21,4 @@ mybatis-plus:
     db-config:
       id-type: ASSIGN_ID
 che:
-  path: /Users/xiaoluyouqu/project/img/
+  path: D:\img\
